--- a/src/index.css
+++ b/src/index.css
@@ -10,5 +10,5 @@ body,#root{
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: #222;
+  background-color: #e5e7eb;
 }
